fix: Update body height to not allow overflow

--- a/src/reset.css
+++ b/src/reset.css
@@ -33,12 +33,13 @@ html:focus-within {
 /* Set core body defaults */
 body,
 #root {
-  min-height: 100vh;
+  height: 100vh;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 
 /* A elements that don't have a class get default styles */
